[package]
name = "compare-pokemon-data-wasm-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"

[dependencies.web-sys]
version = "0.3.77"
features = [
  "console",
]
